--- a/workflow1.Rmd
+++ b/workflow1.Rmd
@@ -108,19 +108,21 @@ rmks
 
 ## ROC curves
 
-To allow an objective comparison of combinations, the function **ROC_reports()** applies the Generalised Linear Model (family= binomial) for each selected one. The resulting predictions are then used to compute ROC curves and their corresponding metrics which are both returned by the function as a named list object (in this case called "*reports*").  This function requires as input:
+To allow an objective comparison of combinations, the function **ROC_reports()** applies the Generalised Linear Model (glm() with family= binomial) for each selected one. The resulting predictions are then used to compute ROC curves (with pROC::roc()) and their corresponding metrics which are both returned by the function as a named list object (in this case called "*reports*").  This function requires as input:
 
 - The data object ("*data*") obtained with **load()**.
 - The table with combinations and corresponding positive samples counts (*"mks"*), obtained with **Combi()**.
 
-In addition, the function requires to specify the class case and the combinations of interest. In this example 3 combinations have been chosen among the 14 contained in "rmks" object.
+In addition, the function requires to specify the class case and the combinations of interest. 
+Direction can be set (not mandatory) in order to specify if the number of cases is <= ('<') or >= ('>') the number of controls.  Otherwise the direction will be automatically set (default= 'auto'), defining the group in which the median is higher as case group (see [roc() documentation](https://www.rdocumentation.org/packages/pROC/versions/1.17.0.1/topics/roc)). 
+In this example 3 combinations have been chosen among the 14 contained in "rmks" object.
 ```{r}
 reports <-ROC_reports(data, markers_table = mks, case_class = 'A', 
-         selected_combinations = c(1,10,16))
+         selected_combinations = c(1,10,16), direction = '<')
 ```
 "*reports*" contains 3 named objects:
 
-- "Plots": a ggplot object with the ROC curves of the selected combinations.
+- "Plot": a ggplot object with the ROC curves of the selected combinations.
 - "Metrics": a dataframe with the metrics of the roc curves (AUC, opt. cutoff, etc ...).
 - "Models": The list of models that have been computed and then used to classify the samples (the equation for each selected combination).
 
